Fix broken spacing of article media contacts

--- a/news-posts.less
+++ b/news-posts.less
@@ -24,11 +24,11 @@
 ***  ────────────────────────────────────────────────────────────────────────────────────────────
 ***  §1: Default DAESA news section styling....................................................36
 ***    >>> §1.1: Articles & components.........................................................43
-***    >>> §1.2: Primary news feed & posts: Widgets & components..............................150
-***    >>> §1.3: Secondary news feeds (via WSUWP-Content-Syndicate plugin)....................213
-***      └> §1.3.1: Legacy ruleset............................................................217
-***      └> §1.3.2: New, BEM ruleset..........................................................333
-***  §2: WSU Insider style news feeds.........................................................456
+***    >>> §1.2: Primary news feed & posts: Widgets & components..............................155
+***    >>> §1.3: Secondary news feeds (via WSUWP-Content-Syndicate plugin)....................218
+***      └> §1.3.1: Legacy ruleset............................................................222
+***      └> §1.3.2: New, BEM ruleset..........................................................338
+***  §2: WSU Insider style news feeds.........................................................461
 ***  ───────────────────────────────────────────────────────────────────────────────────────────────
 **/
 
@@ -123,6 +123,10 @@
 	.single-post {
 		.article-media-contacts {
 			font-size: 0.9em;
+
+			* + & {
+				margin-top: 1em;
+			}
 		}
 
 		.column .article-media-contacts + :not(.article-media-contacts) {
